tests/machine/x/c/group_by_sort.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_by_sort.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_by_sort.c:126:29: error: array subscript is not an integer
  126 |     itemsItem i = items.data[i];
      |                             ^
/workspace/mochi/tests/machine/x/c/group_by_sort.c:182:15: warning: format ‘%g’ expects argument of type ‘double’, but argument 2 has type ‘list_groupedItem’ [-Wformat=]
  182 |   printf("%.16g\n", grouped);
      |           ~~~~^     ~~~~~~~
      |               |     |
      |               |     list_groupedItem
      |               double

   1: #include <stdio.h>
